# SimpleWebServer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MyRouter.cpp  MyRouter.h  README.md  gen  http_server.cpp  http_server.h  webServer  尹玉文东 webserver.key
.github/workflows/: clang-format.yml
Controller/: CoursesController.cpp  CoursesController.h  MainPageController.cpp  MainPageController.h  ScoresController.cpp  ScoresController.h
Final.xcodeproj/: project.pbxproj
Final.xcodeproj/project.xcworkspace/xcuserdata/tonyyin.xcuserdatad/: UserInterfaceState.xcuserstate
Final.xcodeproj/xcuserdata/tonyyin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Final.xcodeproj/xcuserdata/tonyyin.xcuserdatad/xcschemes/: xcschememanagement.plist
controller/: StudentsController.cpp  StudentsController.h
dao/: CoursesDao.cpp  CoursesDao.h  ScoresDao.cpp  ScoresDao.h  StudentsDao.cpp  StudentsDao.h
framework/: controller.cpp  controller.h  framework.h  http.h  main.cpp  router.cpp  router.h
public/: courses.csv  scores.csv  students.csv  styles.css  sytles.css
service/: CoursesService.cpp  CoursesService.h  ScoresService.cpp  ScoresService.h  StudentsService.cpp  StudentsService.h
test/: README.md  gen.cpp
test/sample programs/: router.framework.cpp  router.framework.h  router.mysite.cpp  server  socket.mac-linux.client.cpp  socket.mac-linux.server.cpp
view/: course_page.html  courses.html  index.html  index_new.html  scores.html  student_page.html  students.html
